--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>Javohir</header>
         <nav>Javohir</nav>
         <section class="home">Rahmatillo</section>
-        <section>Yaxyobek</section>
+        <section>Yaxyobek nma gapla</section>
         <section class="news">Abror</section>
         <section class="top-items">Abror</section>
         <section class="offer">Yaxyoxon</section>
