--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <div class="wrapper">
         <header>Javohir</header>
         <nav>Javohir</nav>
-        <section class="home">Rahmatillo</section>
+        <section class="home">ZayniddinovRahmatillo</section>
         <section>Yaxyobek</section>
         <section class="news">Abror</section>
         <section class="top-items">Abror</section>
         <section class="offer">Yaxyoxon</section>
         <section class="furniture">Abror</section>
-        <section class="review">Rahmatillo</section>
+        <section class="review">ZayniddinovRahmatillo</section>
         <footer>Javohir</footer>
     </div>
 
