javohir add info

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
 
     <div class="wrapper">
-        <header>Javohir</header>
+        <header>Javohir Lorem.</header>
         <nav>Javohir</nav>
         <section class="home">Rahmatillo</section>
         <section>Yaxyobek</section>
