--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <nav>Javohir</nav>
         <section class="home">Rahmatillo</section>
         <section>Yaxyobek</section>
-        <section class="news">Abror</section>
+        <section class="news">
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, eveniet?</div>
+        </section>
         <section class="top-items">Abror</section>
         <section class="offer">Yaxyoxon</section>
         <section class="furniture">Abror</section>
