--- a/index.html
+++ b/index.html
@@ -21,12 +21,119 @@
         <nav>Javohir</nav>
         <section class="home">Rahmatillo</section>
         <section>Yaxyobek</section>
+        <!-- section news started -->
         <section class="news">
-            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, eveniet?</div>
+            <h2>Today's hot deals</h2>
+            <hr>
+            <div class="news-cards">
+                <div class="news-card">
+                    <img src="./img/Rectangle 1.png" alt="#">
+                    <p>ZEBRONICS Zeb-Reaper 2.4GHz Wireless Gaming Mouse</p>
+                     <span>
+                        <p>₹1,599.00</p>
+                        <p class="discount">-40% off</p>
+                     </span>
+                </div>
+                <div class="news-card">
+                    <img src="./img/Rectangle 1 (1).png" alt="#">
+                    <p>Zebronics Zeb-Transformer-k USB Gaming Keyboard | RGB LED lighting</p>
+                     <span>
+                        <p>₹999.00</p>
+                        <p class="discount">-36% off</p>
+                     </span>
+                </div>
+                <div class="news-card">
+                    <img src="./img/Rectangle 1 (2).png" alt="#">
+                    <p>TP-Link Powered USB Hub with 7 Data Smart Charging hub</p>
+                     <span>
+                        <p>₹1,999.00</p>
+                        <p class="discount">-36% off</p>
+                     </span>
+                </div>
+                <div class="news-card">
+                    <img src="./img/Rectangle 1 (3).png" alt="#">
+                    <p>Scarters Mouse Pad, Deskmat Extended for Work from Home/Office/Gaming</p>
+                     <span>
+                        <p>₹1,599.00</p>
+                        <p class="discount">-30% off</p>
+                     </span>
+                </div>
+                <div class="news-card">
+                    <img src="./img/Rectangle 1 (4).png" alt="#">
+                    <p>HyperX Streamer Starter Pack (HBNDL0001), Black Special Headphone</p>
+                     <span>
+                        <p>₹11,599.00</p>
+                        <p class="discount">-26% off</p>
+                     </span>
+                </div>
+            </div>
         </section>
-        <section class="top-items">Abror</section>
+        <!-- section news ended  -->
+
+        <!-- section top-items started  -->
+        <section class="top-items">
+            <h2>Your searched items</h2>
+            <hr>
+            <div class="top-imgs">
+                <img src="./img/Component 3/Rectangle 1.png" alt="#">
+                <img src="./img/Component 3/Component 4.png" alt="#">
+                <img src="./img/Component 3/Component 5.png" alt="#">
+                <img src="./img/Component 3/Component 6.png" alt="#">
+                <img src="./img/Component 3/Component 7.png" alt="#">
+                <img src="./img/Component 3/Component 8.png" alt="#">
+            </div>
+        </section>
+        <!-- section top-items ended -->
         <section class="offer">Yaxyoxon</section>
-        <section class="furniture">Abror</section>
+        
+        <!-- section furniture start  -->
+        <section class="furniture">
+            <h2>Deals on furniture</h2>
+            <hr>
+            <div class="furniture-cards">
+                <div class="furniture-card">
+                    <img src="./img/Rectangle 1 (6).png" alt="#">
+                    <p>UHUD CRAFTS Beautiful Antique Wooden Fold-able Side Table</p>
+                     <span>
+                        <p>₹    599.00</p>
+                        <p class="discount">-40% off</p>
+                     </span>
+                </div>
+                <div class="furniture-card">
+                    <img src="./img/Rectangle 1 (7).png" alt="#">
+                    <p>STAR WORK C Shaped End Table, Slim Couch Side Tables Slide Under Sofa Bed</p>
+                     <span>
+                        <p>₹1,599.00</p>
+                        <p class="discount">-40% off</p>
+                     </span>
+                </div>
+                <div class="furniture-card">
+                    <img src="./img/Rectangle 1 (8).png" alt="#">
+                    <p>Furniture Kart wrought iron Single Seater Swing Chair with Stand</p>
+                     <span>
+                        <p>₹9,999.00</p>
+                        <p class="discount">-36% off</p>
+                     </span>
+                </div>
+                <div class="furniture-card">
+                    <img src="./img/Rectangle 1 (9).png" alt="#">
+                    <p>Lukzer Engineered Wood Coffee Center Tea Table 3 Tier Rack Sofa Side Table</p>
+                     <span>
+                        <p>₹2,549.00</p>
+                        <p class="discount">-30% off</p>
+                     </span>
+                </div>
+                <div class="furniture-card">
+                    <img src="./img/Rectangle 1 (10).png" alt="#">
+                    <p>Kusum Handicrafts Wooden 6 Seater  Living Room | 3+2+1 Seater Sofa</p>
+                     <span>
+                        <p>₹32,599.00</p>
+                        <p class="discount">-26% off</p>
+                     </span>
+                </div>
+            </div>
+        </section>
+        <!-- section furniture end  -->
         <section class="review">Rahmatillo</section>
         <footer>Javohir</footer>
     </div>
